fixed remember passowrd spacing

--- a/src/App.css
+++ b/src/App.css
@@ -961,6 +961,8 @@ input::placeholder {
 
 label[for="remember"] {
 	display: flex;
+	justify-content: start;
+	align-items: center;
 }
 
 /* Styling the check button */
